Update 'backend-tests-go-qdmqqpfv' component image to: quay.io/rhtap_qe/backend-tests-go-qdmqqpfv:ae84eb219e53f8a3dde7071cfc0caf91022a7080@sha256:d1f40714212c5e47092bcd7a72259be53f62cf1af10ef2092ae7cf5933b3a934

--- a/components/backend-tests-go-qdmqqpfv/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-qdmqqpfv/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-qdmqqpfv
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-qdmqqpfv:ae84eb219e53f8a3dde7071cfc0caf91022a7080@sha256:d1f40714212c5e47092bcd7a72259be53f62cf1af10ef2092ae7cf5933b3a934
+          name: container-image
